packages/svelte/tests/compiler-errors/samples/runes-no-derived-update/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-derived-assignment',
		message: 'Invalid assignment to derived state'
	}
});
